--- a/engindex.html
+++ b/engindex.html
@@ -21,41 +21,45 @@
   </head>
   <body>
     <header class="header">
-        <div class="container header-position">
-          <a href="/" class="link">
-            <img src="./images/logo.png" alt="logo Avatar" class="logo logo-header" />
+      <div class="container header-position">
+        <a href="/" class="link">
+          <img
+            src="./images/logo.png"
+            alt="logo Avatar"
+            class="logo logo-header"
+          />
+        </a>
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="#" class="nav-link">Main</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About us</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <button type="button" class="buttonstyle">Log In</button>
+      </div>
+      <ul class="language-switcher">
+        <li class="language-switcher-item">
+          <span class="language-switcher-text">ENG</span>
+        </li>
+        <li class="language-switcher-item">
+          <a href="./index.html">
+            <img
+              src="./images/switchereng.png"
+              alt="button switch ukrainian to englisch"
+            />
           </a>
-          <nav class="nav">
-            <ul class="nav-list">
-              <li class="nav-item">
-                <a href="#" class="nav-link">Головна</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Про нас</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Контакти</a>
-              </li>
-            </ul>
-          </nav>
-          <button type="button" class="buttonstyle">Увійти</button>
-        </div>
-        <ul class="language-switcher">
-          <li class="language-switcher-item">
-            <span class="language-switcher-text">ENG</span>
-          </li>
-          <li class="language-switcher-item">
-            <a href="./engindex.html">
-              <img
-                src="./images/switcher.png"
-                alt="button switch ukrainian to englisch"
-              />
-            </a>
-          </li>
-          <li class="language-switcher-item">
-            <span class="language-switcher-text">UA</span>
-          </li>
-        </ul>
+        </li>
+        <li class="language-switcher-item">
+          <span class="language-switcher-text">UA</span>
+        </li>
+      </ul>
     </header>
     <main>
       <!-- enter -->
@@ -67,8 +71,8 @@
               slu Na'viyä hapxì. Säwem nìayoeng!
             </p>
             <p class="enter-text-ua">
-              Хоробрий воїне, звертаюсь до тебе!Твій дух йде з Ейвою, твоє тіло
-              залишається, щоб стати частиною Народу.Борись разом з нами!
+              I'm speaking with the warrior! Your spirit goes with Eywa, your
+              body stays behind to become part of the People. Fight with us!
             </p>
             <button class="buttonstyle-join">Приєднатись до клану</button>
           </div>
@@ -109,10 +113,10 @@
       <section class="quote">
         <div class="container">
           <p class="quote-text">
-            “БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ
-            ЗАКІНЧУЄТЬСЯ.”
+            “A LOT OF PEOPLE FROM THE SKY ARE GONNA COME. THEY’RE GONNA COME
+            LIKE A RAIN THAT NEVER ENDS.”
           </p>
-          <p class="author">Джейк Саллі</p>
+          <p class="author">JAKE SULLY</p>
         </div>
       </section>
       <!-- trailer -->
@@ -122,55 +126,55 @@
             href="https://www.youtube.com/watch?v=d9MyW72ELq0&t=1s"
             target="_blank"
           >
-            <button class="buttonstyle-watch">Дивитися трейлер</button>
+            <button class="buttonstyle-watch">WATCH TRAILER</button>
           </a>
         </div>
       </section>
       <section class="quote">
         <div class="container">
           <p class="quote-text">
-            “ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”
+            “ALL ENERGY IS ONLY BORROWED, AND ONE DAY YOU HAVE TO GIVE IT BACK.”
           </p>
-          <p class="author">Джейк Саллі</p>
+          <p class="author">JAKE SULLY</p>
         </div>
       </section>
       <section class="translate">
         <div class="container">
-          <h2 class="translate-tile">Вчимо мову На’ві</h2>
+          <h2 class="translate-tile">Let's learn the Na'vi language</h2>
           <ul class="translate-list">
             <li class="translate-item">
               <div class="translate-card">
-                <p class="translate-word group1">Привіт</p>
+                <p class="translate-word group1">Hello</p>
                 <p class="translate-result">Kaltxì</p>
               </div>
             </li>
             <li class="translate-item">
               <div class="translate-card">
-                <p class="translate-word group2">Як справи?</p>
+                <p class="translate-word group2">How Are You?</p>
                 <p class="translate-result">Ngaru lu fpom srak?</p>
               </div>
             </li>
             <li class="translate-item">
               <div class="translate-card">
-                <p class="translate-word group3">Все добре</p>
+                <p class="translate-word group3">I'm Well</p>
                 <p class="translate-result">Lu fpom</p>
               </div>
             </li>
             <li class="translate-item">
               <div class="translate-card">
-                <p class="translate-word group1">Дякую</p>
+                <p class="translate-word group1">Thank you</p>
                 <p class="translate-result">Irayo si</p>
               </div>
             </li>
             <li class="translate-item">
               <div class="translate-card">
-                <p class="translate-word group2">Я бачу тебе</p>
+                <p class="translate-word group2">I See You</p>
                 <p class="translate-result">Oel ngati kameie</p>
               </div>
             </li>
             <li class="translate-item">
               <div class="translate-card">
-                <p class="translate-word group3">Слідуй за мною!</p>
+                <p class="translate-word group3">Follow me!</p>
                 <p class="translate-result">Nong oet!</p>
               </div>
             </li>
@@ -180,41 +184,41 @@
       <section class="quote">
         <div class="container">
           <p class="quote-text">
-            “НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ, ВОНА ЗАХИЩАЄ ЛИШЕ
-            ЖИТТЄВИЙ БАЛАНС.”
+            “OUR GREAT MOTHER DOES NOT TAKE SIDES, SHE PROTECTS ONLY THE BALANCE
+            OF LIFE.”
           </p>
-          <p class="author">Нейтірі</p>
+          <p class="author">NEYTIRI</p>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container ">
-        <div class="footer-position">
-        <a href="/" class="link">
-          <img
-            src="./images/logo.png"
-            alt="logo Avatar"
-            class="logo logo-footer"
-          />
-        </a>
-        <ul class="contact-list">
-          <li class="contact-item">
-            <p class="contact-text">Q&A E-mail</p>
-            <a href="mailto:avatartwowqa@gmail.com" class="contact-link"
-              >avatartwowqa@gmail.com</a
-            >
-          </li>
-          <li class="contact-item">
-            <p class="contact-text">Cooperation E-mail</p>
-            <a href="mailto:avatartwowcoop@gmail.com" class="contact-link"
-              >avatartwowcoop@gmail.com</a
-            >
-          </li>
-        </ul>
+      <div class="container">
+        <div class="footer-content">
+          <a href="/" class="link">
+            <img
+              src="./images/logo.png"
+              alt="logo Avatar"
+              class="logo logo-footer"
+            />
+          </a>
+          <ul class="contact-list">
+            <li class="contact-item">
+              <p class="contact-text">Q&A E-mail</p>
+              <a href="mailto:avatartwowqa@gmail.com" class="contact-link"
+                >avatartwowqa@gmail.com</a
+              >
+            </li>
+            <li class="contact-item">
+              <p class="contact-text">Cooperation E-mail</p>
+              <a href="mailto:avatartwowcoop@gmail.com" class="contact-link"
+                >avatartwowcoop@gmail.com</a
+              >
+            </li>
+          </ul>
         </div>
-         <small class="info"
-              >©2023 Avatar: The Way Of Water. All rights reserved</small
-         >
+        <small class="info"
+          >©2023 Avatar: The Way Of Water. All rights reserved</small
+        >
       </div>
     </footer>
   </body>
